## To Do: Document all this stuff.

## Miscellaneous Notes

## Cannot put the main Makefile.am in src/Makefile.am because targets
## like drawtool clash with pre-existing directories of the same name.
## Maybe there is a way to push these generated executables in a
## subdirectory?

## Various source files linked into the same target library sometimes
## require different options, in some cases in such a way that these
## options cannot be combined into a single set of options that works
## for all the files.  This is addressed by breaking up such libraries
## into a few "convenience libtool libraries", each made of files
## compiled with identical options, and then combined to form the
## final library.

## But unless the libFOO_la_SOURCES has a .cc file in it directly, as
## opposed to only indirectly via convenience libraries, it will be
## relinked during installation using gcc rather than g++, causing an
## error.  So the first part of each broken-into-parts library is the
## library itself.

## Removed linkage against external jpeg library, as it was not used.

## Pending Issues:

## Do
##   TIFF/tiff.h TIFF/tiffio.h TIFF/format.h
## really belong in the installed include files, even when using an
## external tiff library?

## Snatch the source code for refman.PS from the ivtools-doc CVS repo.

## Comterp is compiled with ACE cpp options, but not linked to ACE.

## Release 1.2.10 added options -D_XOPEN_SOURCE -DLEAKCHECK, perhaps
## we should adjust Makefile.am to incorporate them.

ACLOCAL_AMFLAGS = -I m4

### Non-architecture-specific support file location
pkgdatadir = $(datadir)/$(PACKAGE)

EXTRA_LTLIBRARIES =

lib_LTLIBRARIES =

# These must occur in *dependency order* to avoid an *install time*
# link error of this sort:
#
#  /usr/bin/ld: cannot find -lAttribute
#  collect2: ld returned 1 exit status
#  libtool: install: error: relink `libComTerp.la' with the above command before installing it
#
# This is a longstanding known and undocumented bug.  I would like to
# take this opportunity to thank the authors of the autotools suite.
#
# An appropriate ordering can be generated by running the script
# src/scripts/tsort-libs

lib_LTLIBRARIES += libIV.la
lib_LTLIBRARIES += libUnidraw.la
lib_LTLIBRARIES += libComUtil.la
lib_LTLIBRARIES += libAttribute.la
lib_LTLIBRARIES += libIVGlyph.la
lib_LTLIBRARIES += libComTerp.la
lib_LTLIBRARIES += libAttrGlyph.la
lib_LTLIBRARIES += libComGlyph.la
lib_LTLIBRARIES += libTopoFace.la
lib_LTLIBRARIES += libUniIdraw.la
lib_LTLIBRARIES += libOverlayUnidraw.la
lib_LTLIBRARIES += libComUnidraw.la
lib_LTLIBRARIES += libFrameUnidraw.la
lib_LTLIBRARIES += libGraphUnidraw.la
lib_LTLIBRARIES += libUnidraw-common.la
lib_LTLIBRARIES += libTime.la
lib_LTLIBRARIES += libIV-common.la
lib_LTLIBRARIES += libDrawServ.la
if HAVE_LIBACE
lib_LTLIBRARIES += libAceDispatch.la
endif

LIBVER = -version-info $(LIB_IV_VER)

libAceDispatch_la_LDFLAGS	= $(LIBVER)
libAttrGlyph_la_LDFLAGS		= $(LIBVER)
libAttribute_la_LDFLAGS		= $(LIBVER)
libComGlyph_la_LDFLAGS		= $(LIBVER)
libComTerp_la_LDFLAGS		= $(LIBVER)
libComUnidraw_la_LDFLAGS	= $(LIBVER)
libComUtil_la_LDFLAGS		= $(LIBVER)
libDrawServ_la_LDFLAGS		= $(LIBVER)
libFrameUnidraw_la_LDFLAGS	= $(LIBVER)
libGraphUnidraw_la_LDFLAGS	= $(LIBVER)
libIVGlyph_la_LDFLAGS		= $(LIBVER)
libIV_common_la_LDFLAGS		= $(LIBVER)
libIV_la_LDFLAGS		= $(LIBVER)
libOverlayUnidraw_la_LDFLAGS	= $(LIBVER)
libTime_la_LDFLAGS		= $(LIBVER)
libTopoFace_la_LDFLAGS		= $(LIBVER)
libUniIdraw_la_LDFLAGS		= $(LIBVER)
libUnidraw_common_la_LDFLAGS	= $(LIBVER)
libUnidraw_la_LDFLAGS		= $(LIBVER)

if HAVE_LIBACE
ACEDISPATCH_LA = libAceDispatch.la
else
ACEDISPATCH_LA =
endif

libAceDispatch_la_LIBADD	= libIV.la $(ACE_LD)
libAttrGlyph_la_LIBADD		= libAttribute.la libIVGlyph.la libUnidraw.la libIV.la
libAttribute_la_LIBADD		= libUnidraw.la libIV.la libComUtil.la
libComGlyph_la_LIBADD		= libAttribute.la libComTerp.la libIVGlyph.la libIV.la libComUtil.la
libComTerp_la_LIBADD		= libAttribute.la libUnidraw.la libIV.la $(ACE_LD) libComUtil.la $(MATH_LD)
libComUnidraw_la_LIBADD		= libAttribute.la libComGlyph.la libComTerp.la libIVGlyph.la libOverlayUnidraw.la libUniIdraw.la libUnidraw.la libIV.la $(ACE_LD) libComUtil.la $(X11_LD)
libComUtil_la_LIBADD		= 
libDrawServ_la_LIBADD		= libAttribute.la libComTerp.la libComUnidraw.la libFrameUnidraw.la libGraphUnidraw.la libIVGlyph.la libOverlayUnidraw.la libTopoFace.la libUniIdraw.la libUnidraw.la libIV.la libComUtil.la $(ACE_LD)
libFrameUnidraw_la_LIBADD	= libAttribute.la libComGlyph.la libComTerp.la libComUnidraw.la libIVGlyph.la libOverlayUnidraw.la libUniIdraw.la libUnidraw.la libIV.la libComUtil.la
libGraphUnidraw_la_LIBADD	= libAttribute.la libComTerp.la libComUnidraw.la libIVGlyph.la libOverlayUnidraw.la libTopoFace.la libUniIdraw.la libUnidraw.la libIV.la libComUtil.la
libIVGlyph_la_LIBADD		= libIV.la $(X11_LD)
libIV_common_la_LIBADD		=
libIV_la_LIBADD			= $(TIFF_LD) $(XEXT_LD) $(X11_LD) $(MATH_LD)
libOverlayUnidraw_la_LIBADD	= libAttrGlyph.la libAttribute.la libComGlyph.la libComTerp.la libIVGlyph.la libTopoFace.la libUniIdraw.la libUnidraw.la libIV.la $(ACE_LD) libComUtil.la $(CLIPPOLY_LD) $(X11_LD) $(MATH_LD)
libTime_la_LIBADD		= libIVGlyph.la libIV.la
libTopoFace_la_LIBADD		= libUnidraw.la libIV.la
libUniIdraw_la_LIBADD		= libUnidraw.la libIV.la
libUnidraw_common_la_LIBADD	= libIV.la
libUnidraw_la_LIBADD		= libIV.la $(X11_LD)

IVSTD_INCLUDES = -Isrc -Isrc/include -Isrc/include/ivstd
IV2_6_INCLUDES = -Div2_6_compatible -Isrc -Isrc/include/IV-2_6 -Isrc/include -Isrc/include/ivstd

### libComTerp

libComTerp_parts = libComTerpPART1.la libComTerpPART2.la
libComTerp_la_LIBADD += $(libComTerp_parts)
EXTRA_LTLIBRARIES += $(libComTerp_parts)

libComTerp_la_SOURCES = src/ComTerp/comhandler.cc	\
src/ComTerp/comterpserv.cc src/ComTerp/ctrlfunc.cc

libComTerp_la_CPPFLAGS = \
 $(ACE_INLINE_CPPFLAGS) \
 -Dcplusplus_2_1 $(IVSTD_INCLUDES)

libComTerpPART1_la_SOURCES = src/ComTerp/assignfunc.cc			\
src/ComTerp/bitfunc.cc src/ComTerp/boolfunc.cc				\
src/ComTerp/bquotefunc.cc src/ComTerp/charfunc.cc			\
src/ComTerp/comfunc.cc src/ComTerp/comvalue.cc src/ComTerp/condfunc.cc	\
src/ComTerp/debugfunc.cc src/ComTerp/dotfunc.cc				\
src/ComTerp/helpfunc.cc src/ComTerp/iofunc.cc src/ComTerp/listfunc.cc	\
src/ComTerp/mathfunc.cc src/ComTerp/numfunc.cc src/ComTerp/parser.cc	\
src/ComTerp/postfunc.cc src/ComTerp/randfunc.cc src/ComTerp/scanner.cc	\
src/ComTerp/statfunc.cc src/ComTerp/strmfunc.cc				\
src/ComTerp/symbolfunc.cc src/ComTerp/typefunc.cc			\
src/ComTerp/xformfunc.cc

libComTerpPART1_la_CPPFLAGS = \
 $(ACE_CPPFLAGS) -Dcplusplus_2_1 $(IVSTD_INCLUDES)

libComTerpPART2_la_SOURCES = src/ComTerp/comterp.cc

libComTerpPART2_la_CPPFLAGS = \
 -Div2_6_incompatible -Isrc/include \
 $(ACE_CPPFLAGS) -Dcplusplus_2_1 $(IVSTD_INCLUDES)

### libIV_common

libIV_common_la_SOURCES = src/OS/listimpl.cc src/OS/math.cc		\
src/OS/memory.cc src/InterViews/regexp.cc src/InterViews/resource.cc	\
src/OS/string.cc src/IV-2_6/textbuffer.cc src/IV-2_6/tform2_6.cc	\
src/InterViews/transformer.cc

libIV_common_la_CPPFLAGS = \
 -Dcplusplus_2_1 $(IVSTD_INCLUDES)

### libTime

libTime_la_SOURCES = src/Time/Date.cc src/Time/obstime.cc	\
src/Time/Time.cc src/Time/timeglyph.cc

libTime_la_CPPFLAGS = \
 -Dcplusplus_2_1 $(IVSTD_INCLUDES)

### libIVGlyph

libIVGlyph_la_SOURCES = src/IVGlyph/bdfltform.cc			\
src/IVGlyph/bdtable.cc src/IVGlyph/bdvalue.cc src/IVGlyph/boolform.cc	\
src/IVGlyph/charfield.cc src/IVGlyph/dragedit.cc			\
src/IVGlyph/enumform.cc src/IVGlyph/exportchooser.cc			\
src/IVGlyph/fieldedit.cc src/IVGlyph/figure.cc src/IVGlyph/gdialogs.cc	\
src/IVGlyph/globals.cc src/IVGlyph/idraw.cc				\
src/IVGlyph/importchooser.cc src/IVGlyph/namestate.cc			\
src/IVGlyph/observables.cc src/IVGlyph/odialogs.cc			\
src/IVGlyph/ofilechooser.cc src/IVGlyph/printchooser.cc			\
src/IVGlyph/saveaschooser.cc src/IVGlyph/scrollable.cc			\
src/IVGlyph/strchooser.cc src/IVGlyph/stredit.cc			\
src/IVGlyph/strlist.cc src/IVGlyph/textbuff.cc src/IVGlyph/textedit.cc	\
src/IVGlyph/texteditor.cc src/IVGlyph/textform.cc			\
src/IVGlyph/textview.cc src/IVGlyph/textwindow.cc			\
src/IVGlyph/toolbutton.cc src/IVGlyph/valuator.cc

libIVGlyph_la_CPPFLAGS = \
 -Dcplusplus_2_1 $(IVSTD_INCLUDES)

### libDrawServ

libDrawServ_parts = libDrawServPART1.la libDrawServPART2.la
libDrawServ_la_LIBADD += $(libDrawServ_parts)
EXTRA_LTLIBRARIES += $(libDrawServ_parts)

libDrawServ_la_SOURCES = src/DrawServ/ackback-handler.cc	\
src/DrawServ/drawfunc.cc src/DrawServ/drawlink.cc		\
src/DrawServ/drawserv-handler.cc

libDrawServ_la_CPPFLAGS = \
 -Dcplusplus_2_1 $(ACE_INLINE_CPPFLAGS) $(IV2_6_INCLUDES)

libDrawServPART1_la_SOURCES = src/DrawServ/drawcatalog.cc	\
src/DrawServ/drawcmds.cc src/DrawServ/drawcomps.cc		\
src/DrawServ/drawcreator.cc src/DrawServ/draweditor.cc		\
src/DrawServ/drawlinkcomp.cc src/DrawServ/drawlinklist.cc	\
src/DrawServ/drawserv.cc src/DrawServ/drawviews.cc		\
src/DrawServ/grid.cc src/DrawServ/gridlist.cc			\
src/DrawServ/linkselection.cc src/DrawServ/sid.cc

libDrawServPART1_la_CPPFLAGS = \
 -Dcplusplus_2_1 $(ACE_CPPFLAGS) $(IV2_6_INCLUDES)

libDrawServPART2_la_SOURCES = src/DrawServ/drawimport.cc	\
src/DrawServ/drawkit.cc src/DrawServ/rcdialog.cc

libDrawServPART2_la_CPPFLAGS = \
 -Dcplusplus_2_1 -Div2_6_incompatible	\
 -Isrc/include $(ACE_CPPFLAGS) $(IV2_6_INCLUDES)

### libUnidraw

libUnidraw_common_la_SOURCES = src/Unidraw/component.cc			\
src/Unidraw/compview.cc src/Unidraw/geomobjs.cc				\
src/Unidraw/iterator.cc src/Unidraw/uarray.cc src/Unidraw/uhash.cc	\
src/Unidraw/ulist.cc src/Unidraw/umap.cc

libUnidraw_common_la_CPPFLAGS = \
 -Dcplusplus_2_1 -DUnidrawCommon $(IVSTD_INCLUDES)

### libComUnidraw

libComUnidraw_parts = libComUnidrawPART1.la
libComUnidraw_la_LIBADD += $(libComUnidraw_parts)
EXTRA_LTLIBRARIES += $(libComUnidraw_parts)

libComUnidraw_la_SOURCES = src/ComUnidraw/comeditor.cc			\
src/ComUnidraw/comterp-iohandler.cc src/ComUnidraw/dialogfunc.cc	\
src/ComUnidraw/grdotfunc.cc src/ComUnidraw/grfunc.cc			\
src/ComUnidraw/grlistfunc.cc src/ComUnidraw/groupfunc.cc		\
src/ComUnidraw/grstatfunc.cc src/ComUnidraw/grstrmfunc.cc		\
src/ComUnidraw/highlightfunc.cc src/ComUnidraw/nfunc.cc			\
src/ComUnidraw/pixelfunc.cc src/ComUnidraw/plotfunc.cc			\
src/ComUnidraw/unifunc.cc

libComUnidraw_la_CPPFLAGS = \
 -Dcplusplus_2_1 $(ACE_CPPFLAGS) $(IV2_6_INCLUDES)

libComUnidrawPART1_la_SOURCES = src/ComUnidraw/comterp-acehandler.cc

libComUnidrawPART1_la_CPPFLAGS = \
 -Dcplusplus_2_1 $(ACE_INLINE_CPPFLAGS) \
 -Div2_6_incompatible -Isrc/include $(IV2_6_INCLUDES)

### libComGlyph

libComGlyph_la_SOURCES = src/ComGlyph/attrdialog.cc	\
src/ComGlyph/comtextedit.cc src/ComGlyph/comtextview.cc	\
src/ComGlyph/terpdialog.cc

libComGlyph_la_CPPFLAGS = \
 -Dcplusplus_2_1 -Div2_6_incompatible -Isrc/include $(IVSTD_INCLUDES)

### libIV

libIV_parts = libIVPART1.la libIVPART2.la libIVPART3.la libIVPART4.la
libIV_la_LIBADD += $(libIV_parts)
EXTRA_LTLIBRARIES += $(libIV_parts)

libIV_la_SOURCES = src/InterViews/session.cc

libIV_la_CPPFLAGS = \
 -Dcplusplus_2_1 \
 -DABSLIBALLDIR='"$(pkgdatadir)"' \
 -DRELLIBALLDIR='"lib/$(PACKAGE)"' \
 -DX_LIBDIR='"$(libdir)"' \
 -Isrc/IV $(IVSTD_INCLUDES)

libIVPART1_la_SOURCES = src/InterViews/psfont.cc

libIVPART1_la_CPPFLAGS = \
 -Dcplusplus_2_1 \
 -Dps_metrics_dir='"$(PSFontDir)"' \
 -Isrc/IV $(IVSTD_INCLUDES)

libIVPART2_la_SOURCES = src/InterViews/dialogs.cc src/InterViews/kit.cc

libIVPART2_la_CPPFLAGS = \
 -Dcplusplus_2_1 -Dsgi_motif_kit -Dmotif_kit -Ddefault_kit=SMFKit \
 -Isrc/IV $(IVSTD_INCLUDES)

libIVPART3_la_SOURCES = src/Dispatch/dispatcher.cc			\
src/Dispatch/iohandler.cc src/IV-2_6/adjuster2_6.cc			\
src/IV-2_6/banner.cc src/IV-2_6/border2_6.cc src/IV-2_6/box2_6.cc	\
src/IV-2_6/button2_6.cc src/IV-2_6/compeditor.cc src/IV-2_6/control.cc	\
src/IV-2_6/deck2_6.cc src/IV-2_6/dialog2_6.cc				\
src/IV-2_6/filebrowser.cc src/IV-2_6/filechooser.cc			\
src/IV-2_6/frame.cc src/IV-2_6/glue2_6.cc src/IV-2_6/interactor.cc	\
src/IV-2_6/matcheditor.cc src/IV-2_6/menu2_6.cc src/IV-2_6/message.cc	\
src/IV-2_6/painter.cc src/IV-2_6/panner2_6.cc				\
src/IV-2_6/perspective.cc src/IV-2_6/rubband.cc src/IV-2_6/rubcurve.cc	\
src/IV-2_6/rubgroup.cc src/IV-2_6/rubline.cc src/IV-2_6/rubrect.cc	\
src/IV-2_6/rubverts.cc src/IV-2_6/scene.cc src/IV-2_6/scrollbar2_6.cc	\
src/IV-2_6/scroller2_6.cc src/IV-2_6/sensor.cc src/IV-2_6/shape.cc	\
src/IV-2_6/strbrowser.cc src/IV-2_6/strchooser.cc			\
src/IV-2_6/streditor.cc src/IV-2_6/subject.cc src/IV-2_6/textbuffer.cc	\
src/IV-2_6/textdisplay.cc src/IV-2_6/texteditor.cc			\
src/IV-2_6/tform2_6.cc src/IV-2_6/tray.cc src/IV-2_6/viewport.cc	\
src/IV-2_6/world.cc src/IV-2_6/xbitmap2_6.cc src/IV-2_6/xevent2_6.cc	\
src/IV-2_6/xinter.cc src/IV-2_6/xpainter.cc src/IV-2_6/xpattern.cc	\
src/IV-X11/xbitmap.cc src/IV-X11/xbrush.cc src/IV-X11/xcanvas.cc	\
src/IV-X11/xcolor.cc src/IV-X11/xcursor.cc src/IV-X11/xdrag.cc		\
src/IV-X11/xevent.cc src/IV-X11/xfont.cc src/IV-X11/xraster.cc		\
src/IV-X11/xreqerr.cc src/IV-X11/xselection.cc src/IV-X11/xwindow.cc	\
src/InterViews/action.cc src/InterViews/adjust.cc			\
src/InterViews/aggr.cc src/InterViews/align.cc				\
src/InterViews/alloctbl.cc src/InterViews/arrcomp.cc			\
src/InterViews/background.cc src/InterViews/bevel.cc			\
src/InterViews/border.cc src/InterViews/box.cc				\
src/InterViews/browser.cc src/InterViews/button.cc			\
src/InterViews/character.cc src/InterViews/composition.cc		\
src/InterViews/compositor.cc src/InterViews/debug.cc			\
src/InterViews/deck.cc src/InterViews/fbrowser.cc			\
src/InterViews/fchooser.cc src/InterViews/field.cc			\
src/InterViews/geometry.cc src/InterViews/glyph.cc			\
src/InterViews/group.cc src/InterViews/handler.cc			\
src/InterViews/hit.cc src/InterViews/image.cc src/InterViews/input.cc	\
src/InterViews/label.cc src/InterViews/layout.cc			\
src/InterViews/lrmarker.cc src/InterViews/menu.cc			\
src/InterViews/mf_dialogs.cc src/InterViews/mf_kit.cc			\
src/InterViews/mono_kit.cc src/InterViews/monoglyph.cc			\
src/InterViews/observe.cc src/InterViews/ol_dialogs.cc			\
src/InterViews/ol_kit.cc src/InterViews/page.cc				\
src/InterViews/patch.cc src/InterViews/place.cc				\
src/InterViews/polyglyph.cc src/InterViews/printer.cc			\
src/InterViews/regexp.cc src/InterViews/resource.cc			\
src/InterViews/rule.cc src/InterViews/scrbox.cc				\
src/InterViews/shadow.cc src/InterViews/simpcomp.cc			\
src/InterViews/slider.cc src/InterViews/smf_kit.cc			\
src/InterViews/stencil.cc src/InterViews/stepper.cc			\
src/InterViews/style.cc src/InterViews/superpose.cc			\
src/InterViews/target.cc src/InterViews/telltale.cc			\
src/InterViews/texcomp.cc src/InterViews/tformsetter.cc			\
src/InterViews/tile.cc src/InterViews/transformer.cc			\
src/InterViews/xymarker.cc src/OS/directory.cc src/OS/file.cc		\
src/OS/host.cc src/OS/listimpl.cc src/OS/math.cc src/OS/memory.cc	\
src/OS/string.cc src/OS/ustring.cc

libIVPART3_la_CPPFLAGS = \
 -Dcplusplus_2_1 -Isrc/IV $(IVSTD_INCLUDES)

libIVPART4_la_SOURCES = src/InterViews/tiff.cc

libIVPART4_la_CPPFLAGS = \
 -Dcplusplus_2_1 $(TIFF_LOC_CPPFLAG) -Isrc/IV $(IVSTD_INCLUDES)

### libUnidraw

libUnidraw_la_SOURCES = src/Unidraw/align.cc src/Unidraw/brushcmd.cc	\
src/Unidraw/catalog.cc src/Unidraw/catcmds.cc src/Unidraw/cglue.cc	\
src/Unidraw/clipboard.cc src/Unidraw/colorcmd.cc			\
src/Unidraw/command.cc src/Unidraw/component.cc				\
src/Unidraw/compview.cc src/Unidraw/connect.cc				\
src/Unidraw/connector.cc src/Unidraw/creator.cc src/Unidraw/csolver.cc	\
src/Unidraw/ctrlinfo.cc src/Unidraw/damage.cc src/Unidraw/data.cc	\
src/Unidraw/datas.cc src/Unidraw/dialogs.cc src/Unidraw/edit.cc		\
src/Unidraw/editor.cc src/Unidraw/editorinfo.cc src/Unidraw/ellipse.cc	\
src/Unidraw/ellipses.cc src/Unidraw/externview.cc src/Unidraw/font.cc	\
src/Unidraw/geomobjs.cc src/Unidraw/globals.cc src/Unidraw/graphic.cc	\
src/Unidraw/grblock.cc src/Unidraw/grcomp.cc src/Unidraw/grcomptool.cc	\
src/Unidraw/grid.cc src/Unidraw/grview.cc src/Unidraw/gvupdater.cc	\
src/Unidraw/import.cc src/Unidraw/iterator.cc src/Unidraw/keymap.cc	\
src/Unidraw/kybd.cc src/Unidraw/line.cc src/Unidraw/lines.cc		\
src/Unidraw/link.cc src/Unidraw/macro.cc src/Unidraw/magnify.cc		\
src/Unidraw/manip.cc src/Unidraw/manips.cc src/Unidraw/move.cc		\
src/Unidraw/nop.cc src/Unidraw/pad.cc src/Unidraw/patcmd.cc		\
src/Unidraw/path.cc src/Unidraw/picture.cc src/Unidraw/pin.cc		\
src/Unidraw/polygon.cc src/Unidraw/polygons.cc src/Unidraw/pspaint.cc	\
src/Unidraw/psview.cc src/Unidraw/rastercomp.cc				\
src/Unidraw/rasterrect.cc src/Unidraw/rect.cc src/Unidraw/reshape.cc	\
src/Unidraw/rotate.cc src/Unidraw/scale.cc src/Unidraw/select.cc	\
src/Unidraw/selection.cc src/Unidraw/slot.cc src/Unidraw/spline.cc	\
src/Unidraw/splines.cc src/Unidraw/statevar.cc				\
src/Unidraw/statevars.cc src/Unidraw/stateview.cc			\
src/Unidraw/stateviews.cc src/Unidraw/stencilcomp.cc			\
src/Unidraw/stretch.cc src/Unidraw/struct.cc src/Unidraw/text.cc	\
src/Unidraw/tool.cc src/Unidraw/transfn.cc src/Unidraw/transfns.cc	\
src/Unidraw/transforms.cc src/Unidraw/uarray.cc src/Unidraw/uctrl.cc	\
src/Unidraw/uctrls.cc src/Unidraw/uhash.cc src/Unidraw/ulabel.cc	\
src/Unidraw/ulist.cc src/Unidraw/umap.cc src/Unidraw/unidraw.cc		\
src/Unidraw/upage.cc src/Unidraw/ustencil.cc src/Unidraw/vertices.cc	\
src/Unidraw/verts.cc src/Unidraw/viewcmds.cc src/Unidraw/viewer.cc

libUnidraw_la_CPPFLAGS = \
 -Dcplusplus_2_1 $(IVSTD_INCLUDES)

### libAttrGlyph

libAttrGlyph_la_SOURCES = src/AttrGlyph/attredit.cc

libAttrGlyph_la_CPPFLAGS = \
 -Dcplusplus_2_1 \
 -DLibStdCPlusPlus2=0 -DLibStdCPlusPlus3=1 \
 $(IVSTD_INCLUDES)

### libComUtil

libComUtil_parts = libComUtilPART1.la
libComUtil_la_LIBADD += $(libComUtil_parts)
EXTRA_LTLIBRARIES += $(libComUtil_parts)

libComUtil_la_SOURCES = src/ComUtil/atox.cc src/ComUtil/comerr.cc	\
src/ComUtil/dmm.cc src/ComUtil/errfile.cc src/ComUtil/funcptrs.cc	\
src/ComUtil/_lexscan.cc src/ComUtil/mblock.cc src/ComUtil/optable.cc	\
src/ComUtil/_parser.cc src/ComUtil/popen2.cc src/ComUtil/_scanner.cc	\
src/ComUtil/symbols.cc src/ComUtil/txtutil.cc src/ComUtil/types.cc	\
src/ComUtil/util.cc src/ComUtil/xdll.cc

libComUtil_la_CPPFLAGS = \
 -D_POSIX_C_SOURCE $(IVSTD_INCLUDES)

libComUtilPART1_la_SOURCES = src/ComUtil/errsys.cc

# was hardwired:
#  -DABSLIBALLDIR=\"/usr/lib/ivtools/\"
#  -DRELLIBALLDIR=\"lib/ivtools/\"

libComUtilPART1_la_CPPFLAGS = \
 -DABSLIBALLDIR=\"$(pkgdatadir)/\" \
 -DRELLIBALLDIR=\"lib/$(PACKAGE)/\" \
 -D_POSIX_C_SOURCE $(IVSTD_INCLUDES)

# NOTE: inconsistency in whether ABSLIBALLDIR has a trailing slash

### libTopoFace

libTopoFace_la_SOURCES = src/TopoFace/fgeomobjs.cc	\
src/TopoFace/topoedge.cc src/TopoFace/topoedgelist.cc	\
src/TopoFace/topoelt.cc src/TopoFace/topoface.cc	\
src/TopoFace/toponode.cc

libTopoFace_la_CPPFLAGS = \
 -Dcplusplus_2_1 $(IVSTD_INCLUDES)

### libUniIdraw

libUniIdraw_la_SOURCES = src/UniIdraw/idarrow.cc			\
src/UniIdraw/idarrowhead.cc src/UniIdraw/idarrows.cc			\
src/UniIdraw/idcatalog.cc src/UniIdraw/idcmds.cc			\
src/UniIdraw/idcomp.cc src/UniIdraw/idcreator.cc			\
src/UniIdraw/iddialogs.cc src/UniIdraw/ided.cc src/UniIdraw/idkybd.cc	\
src/UniIdraw/idvars.cc

libUniIdraw_la_CPPFLAGS = \
 -Dcplusplus_2_1 $(IV2_6_INCLUDES)

### libGraphUnidraw

libGraphUnidraw_parts = libGraphUnidrawPART1.la
libGraphUnidraw_la_LIBADD += $(libGraphUnidraw_parts)
EXTRA_LTLIBRARIES += $(libGraphUnidraw_parts)

libGraphUnidraw_la_SOURCES = src/GraphUnidraw/edgecomp.cc	\
src/GraphUnidraw/graphcatalog.cc src/GraphUnidraw/graphcmds.cc	\
src/GraphUnidraw/graphcomp.cc src/GraphUnidraw/graphcreator.cc	\
src/GraphUnidraw/graphdata.cc src/GraphUnidraw/grapheditor.cc	\
src/GraphUnidraw/graphtools.cc src/GraphUnidraw/nodecomp.cc

libGraphUnidraw_la_CPPFLAGS = \
 -Dcplusplus_2_1 $(IV2_6_INCLUDES)

libGraphUnidrawPART1_la_SOURCES = src/GraphUnidraw/graphdialog.cc	\
src/GraphUnidraw/graphimport.cc src/GraphUnidraw/graphexport.cc		\
src/GraphUnidraw/graphkit.cc

libGraphUnidrawPART1_la_CPPFLAGS = \
 -Dcplusplus_2_1 \
 -Div2_6_incompatible -Isrc/include $(IV2_6_INCLUDES)

# libFrameUnidraw

libFrameUnidraw_parts = libFrameUnidrawPART1.la
libFrameUnidraw_la_LIBADD += $(libFrameUnidraw_parts)
EXTRA_LTLIBRARIES += $(libFrameUnidraw_parts)

libFrameUnidraw_la_SOURCES = src/FrameUnidraw/framecatalog.cc		\
src/FrameUnidraw/framecmds.cc src/FrameUnidraw/framecomps.cc		\
src/FrameUnidraw/framecreator.cc src/FrameUnidraw/frameeditor.cc	\
src/FrameUnidraw/framefile.cc src/FrameUnidraw/framefunc.cc		\
src/FrameUnidraw/frameps.cc src/FrameUnidraw/framescripts.cc		\
src/FrameUnidraw/frameviewer.cc src/FrameUnidraw/frameviews.cc

libFrameUnidraw_la_CPPFLAGS = \
 -Dcplusplus_2_1 $(IV2_6_INCLUDES)

libFrameUnidrawPART1_la_SOURCES = src/FrameUnidraw/frameimport.cc	\
src/FrameUnidraw/framekit.cc src/FrameUnidraw/framestates.cc

libFrameUnidrawPART1_la_CPPFLAGS = \
 -Dcplusplus_2_1 -Div2_6_incompatible -Isrc/include $(IV2_6_INCLUDES)

### libOverlayUnidraw

libOverlayUnidraw_parts = libOverlayUnidrawPART1.la libOverlayUnidrawPART2.la
libOverlayUnidraw_la_LIBADD += $(libOverlayUnidraw_parts)
EXTRA_LTLIBRARIES += $(libOverlayUnidraw_parts)

libOverlayUnidraw_la_SOURCES = src/OverlayUnidraw/attrtool.cc		\
src/OverlayUnidraw/clipline.cc src/OverlayUnidraw/grayraster.cc		\
src/OverlayUnidraw/indexmixins.cc src/OverlayUnidraw/leafwalker.cc	\
src/OverlayUnidraw/ovadjuster.cc src/OverlayUnidraw/ovarrow.cc		\
src/OverlayUnidraw/ovcatalog.cc src/OverlayUnidraw/ovcomps.cc		\
src/OverlayUnidraw/ovcreator.cc src/OverlayUnidraw/ovdamage.cc		\
src/OverlayUnidraw/ovdialog.cc src/OverlayUnidraw/ovdoer.cc		\
src/OverlayUnidraw/oved.cc src/OverlayUnidraw/ovellipse.cc		\
src/OverlayUnidraw/ovfile.cc src/OverlayUnidraw/ovhull.cc		\
src/OverlayUnidraw/ovline.cc src/OverlayUnidraw/ovmanips.cc		\
src/OverlayUnidraw/ovpage.cc src/OverlayUnidraw/ovpainter.cc		\
src/OverlayUnidraw/ovpanner.cc src/OverlayUnidraw/ovpolygon.cc		\
src/OverlayUnidraw/ovprecise.cc src/OverlayUnidraw/ovpspict.cc		\
src/OverlayUnidraw/ovpsview.cc src/OverlayUnidraw/ovraster.cc		\
src/OverlayUnidraw/ovrect.cc src/OverlayUnidraw/ovrestimage.cc		\
src/OverlayUnidraw/ovselect.cc src/OverlayUnidraw/ovselection.cc	\
src/OverlayUnidraw/ovspline.cc src/OverlayUnidraw/ovstates.cc		\
src/OverlayUnidraw/ovstencil.cc src/OverlayUnidraw/ovtext.cc		\
src/OverlayUnidraw/ovunidraw.cc src/OverlayUnidraw/ovvars.cc		\
src/OverlayUnidraw/ovvertices.cc src/OverlayUnidraw/ovviewer.cc		\
src/OverlayUnidraw/ovviews.cc src/OverlayUnidraw/ptinpoly.cc		\
src/OverlayUnidraw/rastercmds.cc src/OverlayUnidraw/scriptview.cc	\
src/OverlayUnidraw/textfile.cc src/OverlayUnidraw/annotate.cc

if HAVE_LIBCLIPPOLY
libOverlayUnidraw_la_SOURCES += src/OverlayUnidraw/cliplinepoly.cc	\
src/OverlayUnidraw/clippoly.cc src/OverlayUnidraw/ovclip.cc
endif

libOverlayUnidraw_la_CPPFLAGS = \
 -Dcplusplus_2_1 $(ACE_CPPFLAGS) $(IV2_6_INCLUDES)

libOverlayUnidrawPART1_la_SOURCES = src/OverlayUnidraw/grloctool.cc	\
src/OverlayUnidraw/ovabout.cc src/OverlayUnidraw/ovcamcmds.cc		\
src/OverlayUnidraw/ovchainview.cc src/OverlayUnidraw/ovcmds.cc		\
src/OverlayUnidraw/ovctrl.cc src/OverlayUnidraw/ovexport.cc		\
src/OverlayUnidraw/ovfixview.cc src/OverlayUnidraw/ovgdialog.cc		\
src/OverlayUnidraw/ovimport.cc src/OverlayUnidraw/ovipcmds.cc		\
src/OverlayUnidraw/ovkit.cc src/OverlayUnidraw/ovprint.cc		\
src/OverlayUnidraw/ovshowhide.cc src/OverlayUnidraw/setattrbyexpr.cc	\
src/OverlayUnidraw/slctbyattr.cc

libOverlayUnidrawPART1_la_CPPFLAGS = \
 -Dcplusplus_2_1 -Div2_6_incompatible $(ACE_CPPFLAGS) \
 -Isrc/OverlayUnidraw -Isrc/include $(IV2_6_INCLUDES)

libOverlayUnidrawPART2_la_SOURCES = src/OverlayUnidraw/aceimport.cc

libOverlayUnidrawPART2_la_CPPFLAGS = \
 -Dcplusplus_2_1 -Div2_6_incompatible -Isrc/include \
 $(ACE_INLINE_CPPFLAGS) $(IV2_6_INCLUDES)

if HAVE_LIBCLIPPOLY
libOverlayUnidraw_la_CPPFLAGS += -DCLIPPOLY -I/usr/include/clippoly
libOverlayUnidrawPART1_la_CPPFLAGS += -DCLIPPOLY -I/usr/include/clippoly
libOverlayUnidrawPART2_la_CPPFLAGS += -DCLIPPOLY -I/usr/include/clippoly
endif

### libAceDispatch

libAceDispatch_la_SOURCES = src/AceDispatch/ace_dispatcher.cc	\
src/AceDispatch/ace_iohandler.cc

libAceDispatch_la_CPPFLAGS = \
 -Dcplusplus_2_1 $(ACE_CPPFLAGS) $(IVSTD_INCLUDES)

### libAttribute

libAttribute_la_SOURCES = src/Attribute/alist.cc	\
src/Attribute/aliterator.cc src/Attribute/attribute.cc	\
src/Attribute/attrlist.cc src/Attribute/attrvalue.cc	\
src/Attribute/commodule.cc src/Attribute/lexscan.cc	\
src/Attribute/paramlist.cc

libAttribute_la_CPPFLAGS = \
 -Dcplusplus_2_1 $(IVSTD_INCLUDES)

### libTIFF

if HAVE_LIBTIFF
# use external tiff library
TIFF_LOC_CPPFLAG = -DEXTERN_TIFF
else
# build internal tiff library
lib_LTLIBRARIES += libTIFF.la
TIFF_LOC_CPPFLAG =
endif

libTIFF_la_SOURCES = src/TIFF/tif_aux.c src/TIFF/tif_ccittrle.c		\
src/TIFF/tif_close.c src/TIFF/tif_compat.c src/TIFF/tif_compress.c	\
src/TIFF/tif_dir.c src/TIFF/tif_dirinfo.c src/TIFF/tif_dirread.c	\
src/TIFF/tif_dirwrite.c src/TIFF/tif_dumpmode.c src/TIFF/tif_error.c	\
src/TIFF/tif_fax3.c src/TIFF/tif_fax4.c src/TIFF/tif_flush.c		\
src/TIFF/tif_getimage.c src/TIFF/tif_jpeg.c src/TIFF/tif_lzw.c		\
src/TIFF/tif_next.c src/TIFF/tif_open.c src/TIFF/tif_packbits.c		\
src/TIFF/tif_print.c src/TIFF/tif_read.c src/TIFF/tif_strip.c		\
src/TIFF/tif_swab.c src/TIFF/tif_thunder.c src/TIFF/tif_tile.c		\
src/TIFF/tif_version.c src/TIFF/tif_warning.c src/TIFF/tif_write.c

# Not in libTIFF:
#  src/TIFF/mkg3states.c src/TIFF/mkspans.c
#  src/TIFF/tif_machdep.c

libTIFF_la_CPPFLAGS = -Isrc/TIFF -Isrc/include/TIFF -Isrc/include

tif_fax3.$(OBJEXT) : g3states.h
.libs/libTIFF_la-tif_fax3.lo: g3states.h

g3states.h: mkg3states
	./mkg3states > $@

mkg3states: src/TIFF/mkg3states.c
	$(CC) -o $@ $<

### libACE Support

if HAVE_LIBACE
ACE_CPPFLAGS = -DHAVE_ACE
ACE_INLINE_CPPFLAGS = -D__ACE_INLINE__ $(ACE_CPPFLAGS)
else
ACE_CPPFLAGS =
ACE_INLINE_CPPFLAGS =
endif

### Support files

pkgdata_DATA = src/ComUtil/comterp.err Idemo InterViews

Idemo: src/idemo/Idemo.defaults
	cp $< $@

InterViews: src/IV/InterViews.defaults
	cp $< $@

### binaries

bin_SCRIPTS = ivtiftopnm pnmtopgm

ivtiftopnm: src/scripts/ivtiftopnm.bash
	cp $< $@
	chmod a+x $@

pnmtopgm: src/scripts/pnmtopgm.sh
	cp $< $@
	chmod a+x $@

bin_PROGRAMS = comdraw comterp comtest dclock drawserv drawtool		\
flipbook gclock glyphterp graphdraw iclass idemo idraw ivtext		\
stdcmapppm

comdraw_SOURCES = src/comdraw/main.cc
comterp_SOURCES = src/comterp_/main.cc
comtest_SOURCES = src/comtest/main.cc
dclock_SOURCES = src/dclock/clocktime.cc src/dclock/clocktime.h	\
src/dclock/data.cc src/dclock/data.h src/dclock/dclock.cc	\
src/dclock/dclock.h src/dclock/dface.cc src/dclock/dface.h	\
src/dclock/digit.cc src/dclock/digit.h src/dclock/segment.cc	\
src/dclock/segment.h
drawserv_SOURCES = src/drawserv_/main.cc
drawtool_SOURCES = src/drawtool/main.cc
flipbook_SOURCES = src/flipbook/main.cc
gclock_SOURCES = src/glyphs/gclock/main.cc
glyphterp_SOURCES = src/glyphterp/main.cc
graphdraw_SOURCES = src/graphdraw/main.cc
iclass_SOURCES = src/iclass/classbuffer.cc src/iclass/classbuffer.h	\
src/iclass/classeditor.cc src/iclass/classeditor.h			\
src/iclass/classinfo.cc src/iclass/classinfo.h src/iclass/dialogs.cc	\
src/iclass/dialogs.h src/iclass/direct.cc src/iclass/direct.h		\
src/iclass/globals.cc src/iclass/globals.h src/iclass/iclass.cc		\
src/iclass/iclass.h src/iclass/main.cc
idemo_SOURCES = src/idemo/main.cc
idraw_SOURCES = src/idraw/main.cc
ivtext_SOURCES = src/ivtext/main.cc
stdcmapppm_SOURCES = src/utils/stdcmapppm.c # C


AM_CPPFLAGS = -Isrc/include
AM_CXXFLAGS = -Wno-write-strings -Wno-deprecated


## Giving per-object flags ensures that all the "main.o" files have
## different names.  See info: (automake)Top > FAQ > Renamed Objects

comdraw_CPPFLAGS	= -Dcplusplus_2_1 $(ACE_INLINE_CPPFLAGS) $(IV2_6_INCLUDES)
comterp_CPPFLAGS	= -Dcplusplus_2_1 $(ACE_INLINE_CPPFLAGS) $(IVSTD_INCLUDES)
comtest_CPPFLAGS	= -Dcplusplus_2_1 $(ACE_CPPFLAGS) $(IVSTD_INCLUDES)
dclock_CPPFLAGS		= -Dcplusplus_2_1 $(IV2_6_INCLUDES)
drawserv_CPPFLAGS	= -Dcplusplus_2_1 $(ACE_INLINE_CPPFLAGS) $(IV2_6_INCLUDES)
drawtool_CPPFLAGS	= -Dcplusplus_2_1 $(ACE_INLINE_CPPFLAGS) $(IV2_6_INCLUDES)
flipbook_CPPFLAGS	= -Dcplusplus_2_1 $(ACE_CPPFLAGS) $(IV2_6_INCLUDES)
gclock_CPPFLAGS		= -Dcplusplus_2_1 -Isrc/glyphs $(IVSTD_INCLUDES)
glyphterp_CPPFLAGS	= -Dcplusplus_2_1 $(ACE_CPPFLAGS) $(IVSTD_INCLUDES)
graphdraw_CPPFLAGS	= -Dcplusplus_2_1 $(ACE_CPPFLAGS) $(IV2_6_INCLUDES)
iclass_CPPFLAGS		= -Dcplusplus_2_1 $(IV2_6_INCLUDES)
idemo_CPPFLAGS		= -Dcplusplus_2_1 $(IVSTD_INCLUDES)
idraw_CPPFLAGS		= -Dcplusplus_2_1 $(IV2_6_INCLUDES)
ivtext_CPPFLAGS		= -Dcplusplus_2_1 $(IVSTD_INCLUDES)
stdcmapppm_CPPFLAGS	=

# AM_LDFLAGS =

comdraw_LDADD	= libComUnidraw.la libComTerp.la libOverlayUnidraw.la libUnidraw.la $(ACEDISPATCH_LA) libIV.la $(ACE_LD)
comterp_LDADD	= libComTerp.la libTopoFace.la libUnidraw.la $(ACE_LD)
comtest_LDADD	= libAttribute.la libComTerp.la libComUtil.la
dclock_LDADD	= libIV.la
drawserv_LDADD	= libDrawServ.la libFrameUnidraw.la libGraphUnidraw.la libOverlayUnidraw.la libComUnidraw.la libUnidraw.la libComTerp.la $(ACEDISPATCH_LA) libIV.la $(ACE_LD)
drawtool_LDADD	= libAceDispatch.la libOverlayUnidraw.la libUnidraw.la libComTerp.la libIV.la $(ACE_LD)
flipbook_LDADD	= libFrameUnidraw.la libComUnidraw.la libOverlayUnidraw.la libUnidraw.la libComTerp.la $(ACEDISPATCH_LA) libIV.la $(ACE_LD)
gclock_LDADD	= libTime.la libIV.la
glyphterp_LDADD= libIVGlyph.la libComGlyph.la libIV.la
graphdraw_LDADD= libGraphUnidraw.la libComUnidraw.la libAceDispatch.la libComTerp.la libOverlayUnidraw.la libUnidraw.la libIV.la $(ACE_LD)
iclass_LDADD	= libIV.la
idemo_LDADD	= libIV.la
idraw_LDADD	= libUniIdraw.la libUnidraw.la
ivtext_LDADD	= libIVGlyph.la libIV.la
stdcmapppm_LDADD=

### directories to recurse into, for installation of include files

SUBDIRS = src src/include

### man pages to install

man_MANS = src/man/man1/drawtool.1 src/man/man1/iclass.1		\
src/man/man1/idraw.1 src/man/man1/comterp.1 src/man/man1/flipbook.1	\
src/man/man1/comdraw.1 src/man/man1/dclock.1 src/man/man1/graphdraw.1	\
src/man/man3/UArray.3 src/man/man3/RotateTool.3				\
src/man/man3/TextDisplay.3 src/man/man3/Banner.3			\
src/man/man3/TextComp.3 src/man/man3/ULabel.3 src/man/man3/Iterator.3	\
src/man/man3/KeyMap.3 src/man/man3/Dispatcher.3				\
src/man/man3/UHashTable.3 src/man/man3/GraphicView.3			\
src/man/man3/BasicDialog.3 src/man/man3/SlotComp.3			\
src/man/man3/ImportCmd.3 src/man/man3/UMap.3 src/man/man3/Scroller.3	\
src/man/man3/RpcService.3 src/man/man3/ScaleTool.3			\
src/man/man3/Message.3 src/man/man3/IOCallback.3			\
src/man/man3/PatternCmd.3 src/man/man3/Path.3				\
src/man/man3/ExternView.3 src/man/man3/ReqErr.3 src/man/man3/RpcHdr.3	\
src/man/man3/Tool.3 src/man/man3/lines.3 src/man/man3/Interactor.3	\
src/man/man3/FileChooser.3 src/man/man3/manips.3			\
src/man/man3/statevars.3 src/man/man3/EditorInfo.3			\
src/man/man3/CGlue.3 src/man/man3/align.3 src/man/man3/ellipses.3	\
src/man/man3/Editor.3 src/man/man3/UList.3 src/man/man3/Pattern.3	\
src/man/man3/iostreamb.3 src/man/man3/uctrls.3				\
src/man/man3/GraphicCompTool.3 src/man/man3/Command.3			\
src/man/man3/LinkComp.3 src/man/man3/splines.3				\
src/man/man3/SplineComp.3 src/man/man3/ComponentView.3			\
src/man/man3/MatchEditor.3 src/man/man3/pspaint.3			\
src/man/man3/rpcstream.3 src/man/man3/datas.3 src/man/man3/RpcReader.3	\
src/man/man3/Scene.3 src/man/man3/GraphicComp.3				\
src/man/man3/StretchTool.3 src/man/man3/Resource.3			\
src/man/man3/LineComp.3 src/man/man3/classes.3 src/man/man3/Tray.3	\
src/man/man3/Viewer.3 src/man/man3/Graphic.3				\
src/man/man3/MagnifyTool.3 src/man/man3/SelectTool.3			\
src/man/man3/CompletionEditor.3 src/man/man3/Painter.3			\
src/man/man3/TransferFunct.3 src/man/man3/Component.3			\
src/man/man3/Selection.3 src/man/man3/Frame.3				\
src/man/man3/Perspective.3 src/man/man3/viewcmds.3			\
src/man/man3/UnidrawIntro.3 src/man/man3/RpcRegistry.3			\
src/man/man3/Unidraw.3 src/man/man3/Page.3 src/man/man3/Viewport.3	\
src/man/man3/Vertices.3 src/man/man3/Regexp.3 src/man/man3/Clipboard.3	\
src/man/man3/Panner.3 src/man/man3/Picture.3 src/man/man3/transfns.3	\
src/man/man3/Damage.3 src/man/man3/StringEditor.3			\
src/man/man3/RpcWriter.3 src/man/man3/GraphicBlock.3			\
src/man/man3/GVUpdater.3 src/man/man3/RasterComp.3			\
src/man/man3/polygons.3 src/man/man3/stateviews.3			\
src/man/man3/Connector.3 src/man/man3/UControl.3			\
src/man/man3/Menu2_6.3 src/man/man3/World.3 src/man/man3/BrushCmd.3	\
src/man/man3/globals.3 src/man/man3/StrBrowser.3 src/man/man3/NOPCmd.3	\
src/man/man3/PolygonComp.3 src/man/man3/IOHandler.3			\
src/man/man3/Catalog.3 src/man/man3/RpcPeer.3				\
src/man/man3/EllipseComp.3 src/man/man3/UStencil.3			\
src/man/man3/StateVarView.3 src/man/man3/Dialog.3			\
src/man/man3/VerticesComp.3 src/man/man3/TextEditor.3			\
src/man/man3/kybd.3 src/man/man3/ConnectTool.3 src/man/man3/rpcbuf.3	\
src/man/man3/MacroCmd.3 src/man/man3/geomobjs.3 src/man/man3/struct.3	\
src/man/man3/edit.3 src/man/man3/RasterRect.3 src/man/man3/Control.3	\
src/man/man3/RectComp.3 src/man/man3/Border.3 src/man/man3/Shape.3	\
src/man/man3/PostScriptView.3 src/man/man3/FontCmd.3			\
src/man/man3/PinComp.3 src/man/man3/ColorCmd.3 src/man/man3/PadComp.3	\
src/man/man3/StrChooser.3 src/man/man3/Subject.3			\
src/man/man3/MoveTool.3 src/man/man3/ControlInfo.3			\
src/man/man3/catcmds.3 src/man/man3/Sensor.3 src/man/man3/Data.3	\
src/man/man3/Button2_6.3 src/man/man3/CSolver.3 src/man/man3/Creator.3	\
src/man/man3/ReshapeTool.3 src/man/man3/TextBuffer.3			\
src/man/man3/Grid.3 src/man/man3/StencilComp.3 src/man/man3/StateVar.3	\
src/man/man3/Box2_6.3 src/man/man3/Deck2_6.3 src/man/man3/Glue2_6.3	\
src/man/man3/Rubband.3 src/man/man3/Manipulator.3			\
src/man/man3/transforms.3 src/man/man3/FileBrowser.3			\
src/man/man3/Adjuster.3

### other documentation

if PS2PDF
doc_DATA = refman.pdf
refman.pdf: src/man/refman3.1/refman.PS
	$(ps2pdf) $< $@
else
doc_DATA = src/man/refman3.1/refman.PS
endif
